<resources>
    <string name="app_name">BBIT3A</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_home">Home</string>

    <string name="username">Username</string>
    <string name="Login">Login</string>
    <string name="phone">Phone Number</string>
    <string name="fname">Firstname</string>
    <string name="lname">LastName</string>
    <string name="pass">Password</string>
    <string name="cpass">ConfirmPassword</string>
    <string name="signupalert">No account? Sign up</string>
    <string name="createccount">Create Account</string>
    <string name="email">Email</string>


</resources>
