<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="strathmore.edu.bbit3a.Signup"
    android:orientation="vertical">


    <EditText
        android:id="@+id/fnam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fname" />
    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lname" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone" />
    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass" />

    <Button
        android:id="@+id/breg"
        android:layout_marginLeft="@dimen/bdim"
        android:layout_width="@dimen/threesixeight"
        android:layout_height="wrap_content"
        android:text="@string/createccount" />


</LinearLayout>
