<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        />
    <Button
        android:layout_width="match_parent"
        android:text="@string/Login"
        android:layout_height="wrap_content"
        />
    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:layout_width="match_parent"
        android:text ="@string/signupalert"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createccount"
        />
</LinearLayout>


