<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="strathmore.edu.bbit3a.Signup"
    tools:showIn="@layout/activity_signup">
    <LinearLayout
        android:layout_width="@dimen/threesixeight"
        android:layout_height="@dimen/fourninefive"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="@dimen/eight"
        tools:layout_editor_absoluteX="@dimen/eight">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fname"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lname"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpass"
            android:inputType="textPassword"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createccount"
            android:onClick="navigatetoHome"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
