<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="strathmore.edu.bbit3a.Login">


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pass" />

    <Button
        android:id="@+id/blog"
        android:background="@color/green"
        android:layout_marginLeft="@dimen/bdim"
        android:layout_width="@dimen/threesixeight"
        android:layout_height="wrap_content"
        android:text="@string/Login" />


    <Button
        android:id="@+id/breg"
        android:background="@color/good"
        android:layout_marginLeft="@dimen/bdim"
        android:layout_width="@dimen/threesixeight"
        android:layout_height="wrap_content"
        android:text="@string/createccount" />
</LinearLayout>
